-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.4.1
-
None
-
Windows 7 32-Bit, MinGW GCC4.5.1, Qt4.7.2
-
02da7db7e12a9b5faab40f6a2b58b65a5ec83f22
When stepping out of a function with a return value QtCreator displays the return value so that is is possible to spy the return value even if it is not assigned to a variable. In version 2.4.1 (and also 2.4.0) this feature does not work anymore. The attached pictures show this bug. The pictures are captured immediately after stepping out of the testAttribute() function in within the QWidget::setVisible() function.
While QtCreator 2.2.0 properly shows the return value, QtCreator 2.4.1 only shows the type (bool) but not the content of the returned value.
- relates to
-
QTCREATORBUG-21913 CDB: return value not shown by Qt Creator debugger
-
- Reported
-
| For Gerrit Dashboard: QTCREATORBUG-6894 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 15175,1 | debugger: add semi-automated test to check return values. | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 19949,1 | debugger: show the returned value as 'returned value', not $23 | 2.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |