debugger: show the returned value as 'returned value', not $23

Task-number: QTCREATORBUG-6894
Change-Id: Ia5d666f2f403eddbbf027a0ac7ac5a708e2425c1
Reviewed-by: hjk <qthjk@ovi.com>